Fetch external foreldrepenger applications (#52)
